@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-08-18T02:02:14Z",
+  "timestamp" : "2022-08-18T08:22:35Z",
   "count_outdated" : 2342,
   "uniques_outdated" : 540,
   "count" : 2367,
-  "uniques" : 557,
+  "uniques" : 558,
   "clones" : [
     {
       "timestamp": "2022-08-04T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -56,6 +56,13 @@
     },
     {
       "timestamp": "2022-08-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
