@@ -1,10 +1,10 @@
 {
   "count": 25,
-  "uniques": 11,
+  "uniques": 12,
   "clones": [
     {
       "timestamp": "2022-08-04T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2022-08-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-18T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
