@@ -1,3 +1,10 @@
+2022-08-18T08:22:35Z:
+* notice: last 14d: unq all: 12 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 540 2342 / 557 2367
+* notice: next accum: outdated-unq outdated-all / unq all: 540 2342 / 558 2367
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-04 2022-08-18]
+
 2022-08-18T02:02:14Z:
 * notice: last 14d: unq all: 11 25
 * notice: prev accum: outdated-unq outdated-all / unq all: 539 2340 / 557 2366
